[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Player/Gun/Bullet/bullet_projectile_0.png" type="Texture" id=1]
[ext_resource path="res://overlap/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://bullet/PlayerBullet.gd" type="Script" id=3]
[ext_resource path="res://bullet/HitEffect.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Misc/light/light.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 10.0

[node name="PlayerBullet" groups=["bullet"] instance=ExtResource( 2 )]
modulate = Color( 1.6, 1.6, 1.6, 1 )
z_index = 1
collision_layer = 8
collision_mask = 5
monitoring = true
script = ExtResource( 3 )
damage = 20
bullet_speed = 3
hit_effect = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="." index="0"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -1, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]
position = Vector2( -1, 2.38419e-07 )
scale = Vector2( 0.9, 0.4 )

[node name="hit_pos" type="Node2D" parent="." index="3"]
position = Vector2( 8, 0 )

[node name="Light2D" type="Light2D" parent="." index="4"]
position = Vector2( 2, 0 )
texture = ExtResource( 5 )
texture_scale = 0.04
color = Color( 0.278431, 1, 1, 1 )
energy = 1.5
shadow_enabled = true

[node name="Light2D2" type="Light2D" parent="." index="5"]
position = Vector2( -6, 0 )
texture = ExtResource( 5 )
texture_scale = 0.02
color = Color( 0.278431, 1, 1, 1 )
energy = 1.7
shadow_enabled = true

[connection signal="area_entered" from="." to="." method="_on_PlayerBullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerBullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
